update　チェックボックス追加？

--- a/Temporary Projects/TechnicalWatchlist/App.config
+++ b/Temporary Projects/TechnicalWatchlist/App.config
@@ -24,6 +24,9 @@
             <setting name="UserName" serializeAs="String">
                 <value>Mito</value>
             </setting>
+            <setting name="ComboShip" serializeAs="String">
+                <value>2</value>
+            </setting>
         </TechnicalWatchlist.Properties.Settings>
     </userSettings>
 </configuration>
