Filterを変更シップネームを変更時ANDでフィルターをかけないとできないのでそこを修正 ANDを使わないと動作しない。

--- a/Temporary Projects/TechnicalWatchlist/Properties/Settings.settings
+++ b/Temporary Projects/TechnicalWatchlist/Properties/Settings.settings
@@ -22,5 +22,8 @@
     <Setting Name="ComboShip" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
+    <Setting Name="Cheackstring" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
