--- a/Temporary Projects/TechnicalWatchlist/App.config
+++ b/Temporary Projects/TechnicalWatchlist/App.config
@@ -27,6 +27,9 @@
             <setting name="ComboShip" serializeAs="String">
                 <value>2</value>
             </setting>
+            <setting name="Cheackstring" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TechnicalWatchlist.Properties.Settings>
     </userSettings>
 </configuration>
