--- a/aaa/Temporary Projects/TechnicalWatchlist/TechnicalWatchlist.csproj
+++ b/aaa/Temporary Projects/TechnicalWatchlist/TechnicalWatchlist.csproj
@@ -85,6 +85,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AZUREDBDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="AZUREDBDataSet11.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AZUREDBDataSet11.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +139,17 @@
     </None>
     <None Include="AZUREDBDataSet.xss">
       <DependentUpon>AZUREDBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="AZUREDBDataSet11.xsc">
+      <DependentUpon>AZUREDBDataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="AZUREDBDataSet11.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>AZUREDBDataSet11.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="AZUREDBDataSet11.xss">
+      <DependentUpon>AZUREDBDataSet11.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
